# agent-workflow-case-study

./: .gitignore  CLAUDE.md  README.md  decisions.md  domain.md  process.md
backend/: CLAUDE.md  pyproject.toml  smoke_step4.py  smoke_step5.py  smoke_step6.py  smoke_step6_informational.py  smoke_step7.py
backend/app/: main.py  mock_data.py  orchestrator.py  state.py  store.py  strategies.py
backend/app/agents/: _runtime.py  appointment_confirmation.py  eligibility_verification.py  patient_intake.py  pre_visit_questionnaire.py  prior_authorization.py  referral_validation.py
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: DashboardFilters.tsx  ExceptionCard.tsx  PipelinePills.tsx  ResolutionForm.tsx  SlaCountdown.tsx  StageBreakdown.tsx  StrategySwitcher.tsx  TickNowButton.tsx  TopNav.tsx
frontend/src/lib/: useNow.ts  usePollingData.ts
frontend/src/views/: Dashboard.tsx  ExceptionQueue.tsx
