[project]
name = "iks-backend"
version = "0.1.0"
description = "Agentic Workflow Management facade — backend"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "langgraph>=0.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
# Anthropic SDK only required when MOCK_LLM=false (Pre-Visit Questionnaire
# real-call branch and LLMRuleStrategy real-call branch).
llm = [
    "anthropic>=0.40",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
